--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -8,9 +8,13 @@
 </head>
 
 <body>
-    <div id="root">
-        <h1>Hello World</h1>
-    </div>
+    <div id="root"></div>
+    <script>
+        const heading = document.createElement('h1');
+        heading.innerHTML = 'Hello World from JavaScript'
+        const root = document.getElementById('root')
+        root.appendChild(heading)
+    </script>
 </body>
 
 </html>
