--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -5,20 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <div id="root"></div>
+    <div id="rooot"></div>
+
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="app.js"></script>
 
-
-    <script>
-        const heading = React.createElement('h1', {}, "Hello World from React!");
-        const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(heading);
-
-    </script>
 </body>
 
 </html>
